objects/ffr__InquiryTemplateColumnFormula__c.object
<CustomObject>
    <description>Stores the formula associated with a column on an action view template.</description>
    <fields>
        <fullName>ffr__ClosingBrackets__c</fullName>
        <label>Closing Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__InquiryTemplateColumn__c</fullName>
        <label>Action View Template Column</label>
        <referenceTo>ffr__InquiryTemplateColumn__c</referenceTo>
        <relationshipLabel>Formula</relationshipLabel>
        <relationshipName>Formula</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__LiteralValue__c</fullName>
        <label>Literal Value</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__OpeningBrackets__c</fullName>
        <label>Opening Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__SourceColumn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Column</label>
        <referenceTo>ffr__InquiryTemplateColumn__c</referenceTo>
        <relationshipLabel>Column Formulas</relationshipLabel>
        <relationshipName>ColumnFormulas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__SourceField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source Field</label>
        <referenceTo>ffr__DataViewField__c</referenceTo>
        <relationshipLabel>Field Formulas</relationshipLabel>
        <relationshipName>FieldFormulas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Action View Template Column Formula</label>
    <nameField>
        <displayFormat>ITCF-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action View Template Column Formulas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>